<resources>
    <array name="pictures">
        <item>@drawable/birds</item>
        <item>@drawable/boats</item>
        <item>@drawable/cartoon</item>
        <item>@drawable/flowers</item>
        <item>@drawable/oceans</item>
        <item>@drawable/space</item>
    </array>
    <string name="app_name">MyFragmentsLessons</string>
    <string name="note1">Заметка 1</string>
    <string name="note2">Заметка 2</string>
    <string name="note3">Заметка 3</string>
    <string name="note4">Заметка 4</string>
    <string name="note5">Заметка 5</string>
    <string name="note6">Заметка 6</string>
    <string name="notes">Notes</string>
    <string name="description">Description</string>
    <string name="date">Date of creation</string>
    <string name="description1">description1</string>
    <string name="description2">description2</string>
    <string name="description3">description3</string>
    <string name="description4">description4</string>
    <string name="description5">description5</string>
    <string name="description6">description6</string>
    <string name="date1" />
    <string name="date2" />
    <string name="date3" />
    <string name="date4" />
    <string name="date5" />
    <string name="date6" />
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="details">Detals</string>
    <string name="dateCreation">Дата создания</string>
    <string name="descriptionDetails">Подробное описание</string>
    <string name="action_search">Search</string>
    <string name="action_sorted">Sorted</string>
    <string name="action_add">Add</string>
    <string name="action_share">Share</string>
    <string name="search_hint">Search</string>
    <string name="about_app">About application</string>
    <string name="preferences">Preferences</string>
    <string name="owner">Viktor Melnyk</string>
    <string name="address">Kurchatova street</string>
    <string name="action_color">Choosen color</string>
    <string name="action_style">Choosen style</string>
    <string name="action_theme">Choosen theme</string>
    <string name="action_etc">Choosen etc.</string>
    <string name="exit">Exit</string>
    <string name="message">Message</string>
    <string name="dialog_msg">Are you sure to want to exit</string>
    <string name="notes_list">Notes</string>
    <string name="title1">Birds</string>
    <string name="title2">Boats</string>
    <string name="title3">Cartoon</string>
    <string name="title4">Flowers</string>
    <string name="title5">Oceans</string>
    <string name="title6">Space</string>

    <string-array name="titles">
        <item>@string/title1</item>
        <item>@string/title2</item>
        <item>@string/title3</item>
        <item>@string/title4</item>
        <item>@string/title5</item>
        <item>@string/title6</item>
    </string-array>


</resources>