<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:hint="@string/search_hint"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sorted"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/action_sorted"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/action_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/action_share"
        app:showAsAction="never" />

</menu>